main.css
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto", sans-serif;
  background-color: #1F2937;
  color: #F9FAF8;
}

img{
  border-radius: 0.5rem;
}

@media screen and (max-width: 768px) {

  .footer-big {
    display: none;
  }

  .footer-element .footer-small {
    visibility: visible;
  }

  .hero-element {
    display: flex;
    flex-direction: column;
  }

  .hero-image img {
    height: 100%;
    width: 100%;
  }

  .information-element ul {
    display: flex;
    flex-direction: column;
  }

  .call-to-action-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2vh;
    width: 100%;
    padding: 3vh 4vw;
    box-sizing: border-box;
  }

  .call-to-action-button {
    height: fit-content;
    width: auto;
    white-space: nowrap;
    padding: 1vh 3vw;
  }

  /* About Page*/

  .about-container {
    display: flex;
    flex-direction: column;
  }

  .about-img img{
    height: 100%;
    width: 100%;
  }

  .about-stack {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .about-stack .card {
    width: 100%;
    height: 100%;
  }

  .about-stack .card .card-info  p {
    max-width: 100%;
  }

  .contact-form label {
    display: flex;
  }

  #name {
    width: 100%;
  }

  #email {
    width: 100%;
  }

  #subject {
    width: 100%;
  }

  #message {
    width: 100%;
  }

  .contact-us {
    display: flex;
    flex-direction: column;
  }

  .contact-container .contact-us {
    align-items: center;
  }

  .contact-us .card {
    width: 100%;
  }

  /*hamburger menu*/

  header {
    position: relative;
  }

  .header-links {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .menu-hamburger {
    display: none;
  }

  .ul-links {
    width: 100%;
    background-color: #1F2937;
    position: absolute;
    top: 12vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 0;
    overflow: hidden;
    align-items: center;
    gap: 1.5rem;
    padding-right: 2vw;
    left: 0;
    padding-top: 4vh;
    box-sizing: border-box;

    transition: all .3s;
  }

  .link {
    font-size: 3rem;
    color: #F9FAF8;
    font-weight: bolder;
    text-decoration: none;
  }

  .list-icon {
    cursor: pointer;
  }

  .menu-hamburger:checked+.ul-links {
    height: calc(40vh - 12vh);
  }

   .label-hamburger {
    display: block !important;
    cursor: pointer;
    color: #F9FAF8;
  }

  /*blog stayling*/

  .blog-post,
  .blog-post.dark {
    flex-direction: column !important;
    padding: 4vh 5vw;
  }

  .blog-image {
    width: 100% !important;
    height: auto;
    max-height: 250px;
    object-fit: cover;
  }

  .blog-content {
    padding: 3vh 0 0 0 !important;
    gap: 1.5vh;
  }

  .blog-content.dark {
    padding: 0 0 3vh 0;
    gap: 1.5vh;
  }

  /*Destinations page*/
  .destination-grid{
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 5vh 0;
  }

  .card-products{
    width: 100%;
    max-width: 200px;
  }

  .hero-element-destinations{
    display: flex !important;
    justify-content: center !important;
    align-items: center;
    padding: 4vh 0 !important;
    width: 100% !important;
  }
}
 
  /* .hero-element-destinations */


header {
  display: flex;
  justify-content: space-around;
  align-items: center;
  padding: 4vh 0;
}

header .header-logo {
  font-size: 24px;
}

header .header-links ul {
  list-style-type: none;
  display: flex;
}

header .header-links ul li a {
  font-size: 18px;
  color: #E5E7EB;
  text-decoration: none;
  padding: 1vw;
}

.menu-hamburger{
  display: none;
}

.label-hamburger{
  display: none;
}

/* 
  Footer styling
*/

html {
  scroll-behavior: smooth;
}

footer {
  display: inline;
  padding: 4vh 0;
}

.footer-element {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  margin: 0vw 8vw;
  padding: 4vh 8vw;
}

.footer-element>a {
  font-size: 18px;
  color: #E5E7EB;
  text-decoration: none;
  align-self: flex-end;
}

.footer-small {
  visibility: hidden;
}

/* 
  Hero element styling for Home
*/

.hero-element {
  display: flex;
  justify-content: center;
  gap: 10vh;
  padding: 13vh 10vw;
}

.hero-text{
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 2vh;
}

.hero-title {
  font-size: 48px;
  font-weight: bolder;
}

.hero-subtext {
  font-size: 18px;
  color: #E5E7EB;
  padding: 3vh 0;
}

.hero-text button {
  color: #F9FAF8;
  background-color: #3882F6;
  padding: 1vh 2vw;
  border: 0;
  border-radius: 1vh;
}

.hero-text button:hover {
  background-color: #0261fc;
}

/* 
  Information element styling for Home
*/

.information-element {
  background-color: #F9FAF8;
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 8vh 0;
  width: 100%;
}

.information-title {
  color: #1F2937;
  font-size: 36px;
  font-weight: bolder;
  padding-bottom: 6vh;
}

.information-element ul {
  display: flex;
}

.information-element ul li {
  padding: 2vw;
}

.information-element ul li figure img{
  border: 3px solid;
  border-radius: 0.5rem;
  border-color: #3882F6;
}

.information-element ul li figure figcaption {
  text-align: center;
  color: #1F2937;
  margin-top: 1vh;
}

/* 
  Quote element styling for Home
*/

.home {
  display: flex;
  flex-direction: column;
  padding: 8vh 20vw;
}

.home .quote-text {
  align-self: center;
}

.home .quote-author {
  text-align:right;
}

/* 
  Call to action styling for Home
*/

.call-to-action-element {
  background-color: #F9FAF8;
  padding: 8vh 4vw;
}

.call-to-action-container {
  background-color: #3882F6;
  padding: 6vh 8vw;
  display: flex;
  justify-content:space-evenly;
  align-items: center;
  border-radius: 0.5rem;
}

.call-to-action-button {
  color: #F9FAF8;
  background-color: #3882F6;
  padding: 1vh 2vw;
  border-color: #F9FAF8;
  border-radius: 0.5rem;
  border-style:solid;
}

.call-to-action-button:hover {
  background-color: #0261fc;
}

label, input {
  display: block;
}

input {
  height: 4vh;
}

.quote-element {
  background-color: #E5E7EB;
}

.quote-container {
  padding: 5vh;
  gap: 10vh;
  padding: 10vh 20vw;
}

.quote-text {
  font-size: 36px;
  font-weight: lighter;
  font-style: italic;
  color: #1F2937
}

.quote-author {
  color: #1F2937;
  font-weight: bolder;
  text-align: right;
}

/*
Classes for the "Contact Us" section
*/

.about-stack {
  display: flex;
  justify-content: space-around;
  padding: 6vh 10vw;
  gap: 3vw;
}

.about-text{
  display: flex;
  flex-direction: column;
  align-items:flex-start;
  margin-right: 4vw;
  gap: 2vh;
}

.card-info>p {
  max-width: 30vw;
}

.section-title {
  padding: 8vh 3vw;
  background-color: #F9FAF8;
  color: #1F2937;
  align-self: stretch;
  text-align: center;
}

.contact-title {
  font-size: 36px;
  padding: 4vh 3vw;
  align-self: stretch;
  text-align: center;
}

.contact-us, .about-container {
  display: flex;
  justify-content: center;
  gap: 4vw;
  padding: 13vh 10vw;
}

.contact-form {
  display: flex;
  flex-direction: column;
  gap: 3vh;
}

.contact-information {
  display: flex;
  justify-content: space-between;
  gap: 4vh;
}

.form-input {
  border: 2px solid #3882F6;
  border-radius: 10px;
}

.form-input {
  width: 44vh;
}

input::placeholder {
  color: #1F2937;
  opacity: 0.5;
}

.contact-form>.form-field>.form-input {
  width: 100vh;
}

.contact-message>.form-input {
  height: 30vh;
  width: 100vh;
}

.contact-button {
  color: #F9FAF8;
  background-color: #3882F6;
  padding: 1.5vh 2vw;
  border: 0;
  border-radius: 0.5rem;
  align-self: center;
}

.card-information {
  display: flex;
  flex-direction: column;
  gap: 4vh;
  margin: 10vh 0vw;
}

.card {
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: left;
  width:33vw;
  gap: 3vh;
  padding: 4vh 2vw ;
  border: 1px solid #F9FAF8;
  border-radius: 10px;
}

/*Classes for the blog section*/

.blog-post {
  background-color: #E5E7EB;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  padding: 5vh 8vw;
}

.blog-image {
  width: 30vw;
  height: auto;
}

.blog-content {
  color: #1F2937;
  display: flex;
  flex-direction: column;
  padding: 5vh 4vw 5vh 10vw;
  gap: 3vh;
}

.blog-post.dark{
  background-color: #1F2937;
  color: #E5E7EB;
  display: flex;
  flex-direction: row-reverse;
  padding: 5vh 9vw;
}

.blog-content h2 {
  font-size: 32px;
  font-weight: bolder;
  color: #3882F6;
}


.blog-post.dark h2 {
  color: #F9FAF8;
}

.blog-content.dark {
  color: #E5E7EB;
  padding: 5vh 10vw 5vh 4vw;
}

/*Classes for the products section*/
.hero, .destinations, .hero-element-destinations{
  padding: 2vh 8vw;
  background-color: #F9FAF8;
}

/* DEPRECATED
.blog-header {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 36px;
  font-weight: bolder;
  background-color: #F9FAF8;
  color:#1F2937;
  padding-top: 8vh;
  padding-bottom: 6vh;
}
*/

.destination-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 9vh 6vw;
  max-width: 1100px;
  margin: 0 auto;
}

.card-products {
  width: 160px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.card-products img {
  width: 130px;
  height: 130px;
  object-fit: cover;
  border: 5px solid #3b82f6;
  border-radius: 18px;
}

.card-products h3 {
  margin-top: 10px;
  font-size: 1rem;
  font-weight: bold;
  color: #1F2937;
}

.card-products p {
  display: none;
}

.destination-title{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 8vh;
  color: #1F2937;
}

.hero-content{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap:5vh;
  margin:0 auto;
  max-width: 800px;
  padding-top: 11vh;
  color: #1F2937;
}

